--- a/src/pages/booked-list/booked-list.scss
+++ b/src/pages/booked-list/booked-list.scss
@@ -1,8 +1,9 @@
-page-home {
+page-booked-list {
+    
 
 
-
-ion-content{
+    
+    ion-content{
    // background-image: linear-gradient(rgba(160, 3, 3, 0.6),rgba(160, 3, 3, 0.9)),url('../assets/backGr.png');
     background-image: linear-gradient(rgba(119, 136, 153, 0.6),rgba(119, 136, 153, 0.6)), url('../assets/gray_back.jpg');
     background-size: cover;
@@ -13,26 +14,32 @@ ion-content{
     }
     
     
-    .up_bar{
-        background: red;
-    }
     
-    .nav{
-         background: cadetblue;
-    }
-    
-    #bu
+    #bookButton
 {
-	
-    background-color: darkcyan;
-    }	
+    color: aliceblue;
+    background-color: teal;
+    font-size: 12px;
+    box-sizing: content-box;
     
-    #side
-    {
+}
+    
+    .doctorList{
+        
+        color: oldlace;
+        background-color: darkcyan;
+    }
+    
+    
+    .fab{
+        color: navy;
         background-color: cadetblue;
     }
-    .center{
-    text-align: center;
-    bottom: auto;
+
+
 }
-}
+
+
+
+
+
