--- a/src/pages/booking-confirmation/booking-confirmation.scss
+++ b/src/pages/booking-confirmation/booking-confirmation.scss
@@ -1,8 +1,9 @@
-page-home {
-
-
-
-ion-content{
+page-booking-confirmation {
+    
+    
+    
+     
+    ion-content{
    // background-image: linear-gradient(rgba(160, 3, 3, 0.6),rgba(160, 3, 3, 0.9)),url('../assets/backGr.png');
     background-image: linear-gradient(rgba(119, 136, 153, 0.6),rgba(119, 136, 153, 0.6)), url('../assets/gray_back.jpg');
     background-size: cover;
@@ -13,26 +14,21 @@ ion-content{
     }
     
     
-    .up_bar{
-        background: red;
+    #btn{
+        background-color: teal;
+        font-size: 15px;
+        
     }
     
-    .nav{
-         background: cadetblue;
+    .conf{
+        background-color: darkcyan;
+        color: white;
+        
     }
     
-    #bu
-{
-	
-    background-color: darkcyan;
-    }	
-    
-    #side
-    {
-        background-color: cadetblue;
+    #t{
+        color: white;
+        font-size: 18px;
     }
-    .center{
-    text-align: center;
-    bottom: auto;
-}
+
 }
