--- a/src/pages/appointment-services/appointment-services.scss
+++ b/src/pages/appointment-services/appointment-services.scss
@@ -1,8 +1,7 @@
-page-home {
-
-
-
-ion-content{
+page-appointment-services {
+    
+    
+    ion-content{
    // background-image: linear-gradient(rgba(160, 3, 3, 0.6),rgba(160, 3, 3, 0.9)),url('../assets/backGr.png');
     background-image: linear-gradient(rgba(119, 136, 153, 0.6),rgba(119, 136, 153, 0.6)), url('../assets/gray_back.jpg');
     background-size: cover;
@@ -25,7 +24,11 @@ ion-content{
 {
 	
     background-color: darkcyan;
-    }	
+    }
+    
+    #b{
+        color: darkcyan;
+    }
     
     #side
     {
@@ -35,4 +38,8 @@ ion-content{
     text-align: center;
     bottom: auto;
 }
+
+    
+    
+
 }
