--- a/src/pages/emergency-services/emergency-services.scss
+++ b/src/pages/emergency-services/emergency-services.scss
@@ -1,8 +1,8 @@
-page-home {
-
-
-
-ion-content{
+page-emergency-services {
+    
+    
+    
+    ion-content{
    // background-image: linear-gradient(rgba(160, 3, 3, 0.6),rgba(160, 3, 3, 0.9)),url('../assets/backGr.png');
     background-image: linear-gradient(rgba(119, 136, 153, 0.6),rgba(119, 136, 153, 0.6)), url('../assets/gray_back.jpg');
     background-size: cover;
@@ -35,4 +35,5 @@ ion-content{
     text-align: center;
     bottom: auto;
 }
+
 }
