--- a/src/pages/booked-list/booked-list.scss
+++ b/src/pages/booked-list/booked-list.scss
@@ -35,6 +35,9 @@ page-booked-list {
         color: navy;
         background-color: cadetblue;
     }
+     #sub_info{
+        color: aquamarine;
+    }
 
 
 }
