--- a/src/pages/doctors-list/doctors-list.scss
+++ b/src/pages/doctors-list/doctors-list.scss
@@ -22,6 +22,10 @@ page-doctors-list {
     box-sizing: content-box;
     
 }
+
+#c{
+    color: aqua;
+}
     
     .doctorList{
         
@@ -33,6 +37,10 @@ page-doctors-list {
     .fab{
         color: navy;
         background-color: cadetblue;
+    }
+
+    #sub_info{
+        color: aquamarine;
     }
 
 
