--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,39 @@
 page-profile {
+     ion-content{
+   // background-image: linear-gradient(rgba(160, 3, 3, 0.6),rgba(160, 3, 3, 0.9)),url('../assets/backGr.png');
+    background-image: linear-gradient(rgba(119, 136, 153, 0.6),rgba(119, 136, 153, 0.6)), url('../assets/gray_back.jpg');
+    background-size: cover;
+    background-position: center;
+
+ 
+     
+    }
+
+    .ava{
+        
+        background-image: linear-gradient(rgba(119, 136, 153, 0.6),rgba(119, 136, 153, 0.6)), url('../assets/gray_back.jpg');
+        color: wheat;
+        
+        background-position: center;
+        font-size: 20px;
+    }
+
+
+   .ava h2
+{
+ color: aquamarine;
+ font-weight: 500;
+ font-size: 18px;
+ //font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.manageColor ion-item
+{
+    color: darkcyan;
+}
+
+
+
 
 }
