--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -13,9 +13,9 @@ page-register {
     }
     
     
-    #reg{
+    #regbtn{
         background-position: center;
-        color: cornflowerblue;
+        color: darkcyan;
         
     }
     
@@ -23,7 +23,7 @@ page-register {
     #bu
     {
 	
-    background-color: darkcyan;
+    color: darkcyan;
     }
 
 }
